--- a/frontend/src/assets/styles/layouts.css
+++ b/frontend/src/assets/styles/layouts.css
@@ -1,16 +1,16 @@
 .sidebar-link {
-  @apply flex items-center  duration-200 ease-in-out  mx-2.5 my-1 py-2 text-base  font-medium rounded-md     border hover:border-mirage-400/60 border-transparent  hover:ring-slate-800/20 text-slate-400/30 hover:text-slate-400/60   shadow  hover:translate-x-px z-50 transition-all focus:text-slate-400/40   -translate-x-px  ring-slate-900/20 ring-1 ring-inset from-mirage-400/10 pl-3 to-mirage-300/5 bg-gradient-to-tl from-10% pr-1.5 hover:from-mirage-300/20 hover:to-mirage-300/10 hover:bg-gradient-to-tl font-display;
+  @apply flex items-center  duration-200 ease-in-out  mx-2.5 my-1 py-2 text-base  font-medium rounded-md border hover:border-mirage-400/60 border-transparent  hover:ring-slate-800/20 text-slate-400/30 hover:text-slate-400/60   shadow  hover:translate-x-px z-50 transition-all focus:text-slate-400/40   -translate-x-px  ring-slate-900/20 ring-2 ring-inset from-mirage-400/10 pl-3 to-mirage-300/5 bg-gradient-to-tl from-10% pr-1.5 hover:from-mirage-300/20 hover:to-mirage-300/10 hover:bg-gradient-to-tl font-display;
 }
 
 .sidebar-link.active {
-  @apply hover:translate-x-px shadow translate-x-px ring-primary-400/20 border-primary-400/40 ring-1 ring-inset from-mirage-300/20 to-mirage-300/10 bg-gradient-to-tl from-10% hover:from-mirage-300/20 hover:to-mirage-300/10 hover:bg-gradient-to-tl text-slate-300/80 ;
+  @apply hover:translate-x-px shadow translate-x-px  ring-1 ring-primary-300/80 border-primary-300/80 ring-inset from-mirage-300/20 to-mirage-300/10 bg-gradient-to-tl from-10% hover:from-mirage-300/20 hover:to-mirage-300/10 hover:bg-gradient-to-tl text-slate-300/80 ;
 }
 
 .sidebar-link.active button {
   @apply bg-mirage-500   border-mirage-300/40  ;
 }
 .sidebar-link.active svg {
-  @apply text-primary-400 
+  @apply text-primary-300
 }
 .sidebar-link button {
   @apply border border-mirage-400/40 transition-colors duration-200 from-10% hover:from-mirage-300/20 hover:to-mirage-300/10 hover:bg-gradient-to-tl
